Fixes from PR